cluster/homelab/apps/vaultwarden/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vaultwarden
    namespace: vaultwarden
    annotations:
        kubernetes.io/ingress.class: ENC[AES256_GCM,data:etoi74k=,iv:dejIb48FIrwkIgPVtnHfZUwhh93jspaVBOCUqTFbMCQ=,tag:YhOSJaQqYq5VZsNOm+mcaQ==,type:str]
        gethomepage.dev/enabled: ENC[AES256_GCM,data:+WBgog==,iv:mgocKg3FNZ20vs3uoImds0Y8Lb8z7cGaip0H54zsvq0=,tag:skyOAZ+91prPX4cKNwC7JQ==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:h6F3DvP8Hmoi,iv:9etLwIXSItr3sCEFDI29DPshKhyx+NGzhWAgBXPQDJk=,tag:3j7M/TkccT4VKsQrPJFdeg==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:egOUz/IIjag=,iv:PkhOgP136Wj/yfpPMZkx5fZqAxa5LwL8vDn8ATABDME=,tag:RJHxcjmpWNH6VmxbayNF6A==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:azLCFVfsemMFt6Q=,iv:63kL4IoRbnovabURix9InjoI36qjIghbzTj6rwVG9j0=,tag:5XgJn3djF6QP8zAFydLHOA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:FaIXCv8yGp7Pn+s=,iv:FCu4fgU6+CUi+ahvTw5HMGdiIzm4Rx0XQk65/OyGhtQ=,tag:rxQZ5CoBtEmSnwZRoWYhbw==,type:str]
spec:
    rules:
        - host: ENC[AES256_GCM,data:STE/L4dzq87RwUqZluLj4zJsyFr58Of9eLUK4A==,iv:qcuJBh62OdEIEnb71/BLOtAs54Gp5Q1iThjK8Z1e/Bk=,tag:A0vvuVl1TuzGYEfYRJhECA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: vaultwarden
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCWTZ0ZUFsS1gxREdUOEpD
[...]
            OipB43M1qzNQ2m/YcCXss7U705JVg0yqGqMLNBy/s1fmQIPhDszLlw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-03-17T21:54:02Z"
    mac: ENC[AES256_GCM,data:aAZK9mwT1ZGAmxcBwUtHYP3AGj5AEqHU5V5ljfb9S8cTNzWcSVRVYIqhIsJetoby0JwVHRIZ8ChYavhEDJxMrYW6gEzWXqLgEDhAs4uafnwVNrZ43Sf9A0aNzZLRpln2NS+uu2PHT/K7vhTcQW3LjJsV3WNluHPLQKtzzWDidCc=,iv:8MolKCMQsbtyBDHcgKtIO2Kyiy6HuwQ3AIjeGEFpjgU=,tag:o4XmM/qE2/eyokwr5xhRcw==,type:str]
    pgp: []
    encrypted_regex: ^(host|annotations)$
    version: 3.7.3
