cluster/homelab/apps/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vaultwarden
    namespace: vaultwarden
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Web Vault
        gethomepage.dev/group: Security
        gethomepage.dev/icon: vaultwarden
        gethomepage.dev/name: Vaultwarden
